--- a/app/views/pages/writeArtical.ejs
+++ b/app/views/pages/writeArtical.ejs
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/popUp.css">
 	
 	<script type="text/javascript" charset="utf-8" src="ueditor/ueditor.config.js"></script>
-	<script type="text/javascript" charset="utf-8" src="ueditor/ueditor.all.js"> </script>
+	<script type="text/javascript" charset="utf-8" src="ueditor/ueditor.all.min.js"> </script>
 </head>
 <body>
 	<% include ../includes/header %>
