--- a/app/views/pages/scenery.ejs
+++ b/app/views/pages/scenery.ejs
@@ -21,7 +21,7 @@
 		<% }) %>
 	</div>
 	<p class="loadEndInfo">加载完成</p>
-	<p class="foot">Copyright 2014   京ICP备14045649-2号</p>
+	<p class="foot">Copyright (c) 2016  京ICP备16065949号-1</p>
 
 	<% include ../includes/backTop %>
 	<% if(!user){%>
@@ -34,6 +34,7 @@
 	<script src="js/bannar.js"></script>
 	<script src="js/backtop.js"></script>
 	<script src="js/logout.js"></script>
+	<script src="js/scenery.js"></script>
 	<% if(!user){%>
 		<script src="js/sign.js"></script>
 	<%} %>
