--- a/app/views/pages/search.ejs
+++ b/app/views/pages/search.ejs
@@ -26,7 +26,7 @@
 		
 	</div>
 	<p class="loadEndInfo">加载完成</p>
-	<p class="foot">Copyright 2014   京ICP备14045649-2号</p>
+	<p class="foot">Copyright (c) 2016  京ICP备16065949号-1</p>
 
 	<% include ../includes/backTop %>
 	<% if(!user){%>
