--- a/app/views/pages/account.ejs
+++ b/app/views/pages/account.ejs
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 	</div>
-	<p class="foot">Copyright 2014   京ICP备14045649-2号</p>
+	<p class="foot">Copyright (c) 2016  京ICP备16065949号-1</p>
 	
 	<script src="third/jquery.min.1.10.2.js"></script>
 	<script src="third/common.js"></script>
