--- a/app/views/pages/admin.ejs
+++ b/app/views/pages/admin.ejs
@@ -49,17 +49,7 @@
 			                <th>操作</th>
 			            </tr>
 			        </thead>
-			        <tbody>
-			        	<% articals.food.forEach(function(obj, index){ %>
-							<tr code="<%=obj._id %>">
-				                <td><%=index+1 %></td>
-				                <td><%=obj.author %></td>
-				                <td><%=obj.title %></td>
-				                <td><%=obj.createTime.toLocaleDateString() %></td>
-				                <td><a href="javascript:">编辑</a><a href="#"><%if(obj.disable == 1){%>禁用<%}else{%>启用<%}%></a></td>
-				            </tr>
-						<% }) %>
-			        </tbody>
+			        <tbody></tbody>
 			    </table>
 				<div id="pagingS" class="paging"></div>
 			</div>
@@ -75,17 +65,7 @@
 			                <th>操作</th>
 			            </tr>
 			        </thead>
-			        <tbody>
-			        	<% articals.scenery.forEach(function(obj, index){ %>
-							<tr code="<%=obj._id %>">
-				                <td><%=index+1 %></td>
-				                <td><%=obj.author %></td>
-				                <td><%=obj.title %></td>
-				                <td><%=obj.createTime.toLocaleDateString() %></td>
-				                <td><a href="javascript:">编辑</a><a href="#"><%if(obj.disable == 1){%>禁用<%}else{%>启用<%}%></a></td>
-				            </tr>
-						<% }) %>
-			        </tbody>
+			        <tbody></tbody>
 			    </table>
 				<div id="pagingJ" class="paging"></div>
 			</div>
@@ -101,17 +81,7 @@
 			                <th>操作</th>
 			            </tr>
 			        </thead>
-			        <tbody>
-			        	<% articals.game.forEach(function(obj, index){ %>
-							<tr code="<%=obj._id %>">
-				                <td><%=index+1 %></td>
-				                <td><%=obj.author %></td>
-				                <td><%=obj.title %></td>
-				                <td><%=obj.createTime.toLocaleDateString() %></td>
-				                <td><a href="javascript:">编辑</a><a href="#"><%if(obj.disable == 1){%>禁用<%}else{%>启用<%}%></a></td>
-				            </tr>
-						<% }) %>
-			        </tbody>
+			        <tbody></tbody>
 			    </table>
 				<div id="pagingYX" class="paging"></div>
 			</div>
@@ -142,7 +112,7 @@
 					                <td><img src="<%=obj.url %>" alt=''></td>
 					                <td><%=obj.url %></td>
 					                <td><input type='text' value='<%=obj.linkUrl %>' /></td>
-					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a href='javascript:'>删除</a></td>
+					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a class="deleteImg" href='javascript:'>删除</a></td>
 					            </tr>
 							<% }) %>
 				        </tbody>
@@ -153,9 +123,7 @@
 						<caption>美景栏目bannar图</caption>
 				        <thead>
 				            <tr>
-				                <th>序号</th>
 				                <th>图片</th>
-				                <th>标题</th>
 				                <th>图片地址</th>
 				                <th>链接地址</th>
 				                <th>操作</th>
@@ -167,7 +135,7 @@
 					                <td><img src="<%=obj.url %>" alt=''></td>
 					                <td><%=obj.url %></td>
 					                <td><input type='text' value='<%=obj.linkUrl %>' /></td>
-					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a href='javascript:'>删除</a></td>
+					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a class="deleteImg" href='javascript:'>删除</a></td>
 					            </tr>
 							<% }) %>
 				        </tbody>
@@ -178,9 +146,7 @@
 						<caption>游戏栏目bannar图</caption>
 				        <thead>
 				            <tr>
-				                <th>序号</th>
 				                <th>图片</th>
-				                <th>标题</th>
 				                <th>图片地址</th>
 				                <th>链接地址</th>
 				                <th>操作</th>
@@ -192,7 +158,7 @@
 					                <td><img src="<%=obj.url %>" alt=''></td>
 					                <td><%=obj.url %></td>
 					                <td><input type='text' value='<%=obj.linkUrl %>' /></td>
-					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a href='javascript:'>删除</a></td>
+					                <td><a href='javascript:'>向上</a><a href='javascript:'>向下</a><a class="deleteImg" href='javascript:'>删除</a></td>
 					            </tr>
 							<% }) %>
 				        </tbody>
