--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -22,8 +22,12 @@
 			<% include ../includes/itemH %>
 		<% }) %>
 	</div>
+
+	
 	<p class="loadEndInfo">加载完成</p>
-	<p class="foot">Copyright 2014   京ICP备14045649-2号</p>
+	
+	
+	<p class="foot">Copyright (c) 2016  京ICP备16065949号-1</p>
 	
 	<% include ../includes/backTop %>
 	<% if(!user){%>
@@ -36,6 +40,7 @@
 	<script src="js/bannar.js"></script>
 	<script src="js/backtop.js"></script>
 	<script src="js/logout.js"></script>
+	<script src="js/index.js"></script>
 	<% if(!user){%>
 		<script src="js/sign.js"></script>
 	<%} %>
