--- a/app/views/pages/writeArtical.ejs
+++ b/app/views/pages/writeArtical.ejs
@@ -62,7 +62,7 @@
 		</div>
 		<p class="subBtn"><input type="button" value="发布"/></p>
 	</div>
-	<p class="foot">Copyright 2014   京ICP备14045649-2号</p>
+	<p class="foot">Copyright (c) 2016  京ICP备16065949号-1</p>
 	<iframe name="iframe" id="iframe" frameborder="0" style="display:none;"></iframe>
 	<% if(!user){%>
 		<% include ../includes/sign %>
