--- a/public/css/artical.css
+++ b/public/css/artical.css
@@ -156,19 +156,18 @@
           background: url(../img/user/clubs.jpg) no-repeat 10px center;
           background-size: 30px; }
         .articalMain .comment .commentList .item .zan {
-          padding: 10px 0; }
-          .articalMain .comment .commentList .item .zan p {
-            width: 36px;
+          width: 36px;
             height: 36px;
             background: url(../img/zan.png) no-repeat 10px 0;
             cursor: pointer;
             padding: 0 20px 0 30px;
+            margin-top: 10px;
             line-height: 36px;
             text-align: center;
             color: #999;
             font-size: 12px; }
-          .articalMain .comment .commentList .item .zan p:hover {
+          .articalMain .comment .commentList .item .zan:hover {
             background-position: 10px -36px; }
-        .articalMain .comment .commentList .item .zan.active p {
+        .articalMain .comment .commentList .item .active {
           color: red;
           background-position: 10px -36px; }
